# django-quotes

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  404.html  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTERS.txt  CONTRIBUTING.md  Justfile  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  index.html  justfile  manage.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.cfg  sitemap.xml  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  codestyle.yml  make-it-taylors-version.yml  publish.yml
0.3/: 404.html  index.html  sitemap.xml
0.3/changelog/: index.html
0.3/code_of_conduct/: index.html
0.3/contributing/: index.html
0.3/managing_quotes/: index.html
0.3/quickstart/: index.html
0.3/search/: search_index.json
0.3/security/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/: index.html  objects.inv
0.4.1/contributing/: index.html
0.4.1/reference/django_quotes/admin/: index.html
0.4.1/reference/django_quotes/rules/: index.html
0.4.1/reference/django_quotes/utils/: index.html
0.4.1/reference/django_quotes/views/: index.html
0.4.1/scripts/: gen_ref_files.py
0.4.1/security/: index.html
0.4.2/: objects.inv  sitemap.xml
0.4.2/changelog/: index.html
0.4.2/code_of_conduct/: index.html
0.4.2/reference/django_quotes/models/: index.html
0.4.2/reference/django_quotes/receivers/: index.html
0.4.2/reference/django_quotes/signals/: index.html
0.4.2/search/: search_index.json
0.4/changelog/: index.html
0.4/code_of_conduct/: index.html
0.4/contributing/: index.html
0.4/managing_quotes/: index.html
0.4/quickstart/: index.html
0.4/reference/django_quotes/admin/: index.html
0.4/reference/django_quotes/apps/: index.html
0.4/reference/django_quotes/models/: index.html
0.4/reference/django_quotes/receivers/: index.html
0.4/reference/django_quotes/rules/: index.html
0.4/reference/django_quotes/signals/: index.html
0.4/search/: search_index.json
0.4/security/: index.html
0.5.0/: index.html  objects.inv  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/contributing/: index.html
0.5.0/quickstart/: index.html
0.5.0/search/: search_index.json
0.5.0/security/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/changelog/: index.html
0.5.1/code_of_conduct/: index.html
0.5.1/contributing/: index.html
0.5.1/quickstart/: index.html
0.5.1/search/: search_index.json
0.5.1/security/: index.html
0.5.2/: index.html  sitemap.xml
0.5.2/changelog/: index.html
0.5.2/quickstart/: index.html
0.5.2/search/: search_index.json
0.5.2/security/: index.html
0.6.0/: sitemap.xml
0.6.0/changelog/: index.html
0.6.0/code_of_conduct/: index.html
0.6.0/contributing/: index.html
0.6.0/quickstart/: index.html
0.6.0/reference/: SUMMARY.txt
0.6.0/search/: search_index.json
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
django_quotes/: admin.py  markov_utils.py  models.py  receivers.py  urls.py  utils.py  views.py
django_quotes/api/: serializers.py  views.py
django_quotes/management/commands/: makemarkov.py
django_quotes/migrations/: 0001_initial.py  0003_alter_source_slug_alter_sourcegroup_slug.py  0004_quote_pub_date.py
django_quotes/templates/: base.html
django_quotes/templates/quotes/: character_create.html  character_delete.html  character_detail.html  character_group_create.html  character_group_detail.html  character_group_list.html  character_list.html  character_update.html  group_delete.html  group_detail.html  group_list.html  group_update.html  quote_create.html  quote_delete.html  quote_detail.html  quote_list.html  quote_update.html  source_create.html  source_delete.html  source_detail.html  source_list.html  source_update.html
docs/: Makefile  code_of_conduct.md  conf.py  contributing.md  index.rst  make.bat  managing_quotes.md  managing_quotes.rst  quickstart.md  quickstart.rst  security.md
docs-sphinx/: index.rst  make.bat  managing_quotes.rst  security.md
locale/: README.md
managing_quotes/: index.html
quickstart/: index.html
reference/: SUMMARY.txt
reference/django_quotes/admin/: index.html
reference/django_quotes/apps/: index.html
reference/django_quotes/models/: index.html
reference/django_quotes/receivers/: index.html
reference/django_quotes/rules/: index.html
reference/django_quotes/signals/: index.html
reference/django_quotes/urls/: index.html
reference/django_quotes/utils/: index.html
reference/django_quotes/views/: index.html
search/: search_index.json
security/: index.html
src/django_quotes/: __init__.py  admin.py  apps.py  markov_utils.py  models.py  receivers.py  rules.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/django_quotes/api/: __init__.py  serializers.py  views.py
src/django_quotes/management/: __init__.py
src/django_quotes/migrations/: 0001_squashed_0005_alter_groupmarkovmodel_created_and_more.py  0002_alter_sourcegroup_name.py  0005_alter_groupmarkovmodel_created_and_more.py  0006_alter_source_description_rendered.py  0007_source_text_model_sourcegroup_text_model.py  0008_auto_20240404_1952.py  0009_alter_source_text_model_alter_sourcegroup_text_model.py  0009_alter_source_text_model_alter_sourcegroup_text_model_squashed_0012_remove_sourcemarkovmodel_source_and_more.py  0010_alter_source_text_model_alter_sourcegroup_text_model.py  0011_alter_source_text_model_alter_sourcegroup_text_model.py  0012_remove_sourcemarkovmodel_source_and_more.py  0013_remove_quote_quote_rendered_and_more.py  0014_alter_source_text_model_alter_sourcegroup_text_model.py  __init__.py
tests/: __init__.py  api_router.py  django_settings.py  test_api.py  test_django_quotes.py  test_docs.py  test_management.py  test_models.py  test_signals.py  test_tasks.py  test_utils.py  test_views.py  urls.py
tests/factories/: __init__.py  users.py
(+48 files in other folders)
